@@ -1,6 +1,8 @@
 0.1.1
+  BugFix: anchor navigation fixes.
   BugFix: the name of some dependencies were not being shown correctly.
   BugFix: list of dependencies was not sorted.
+  Added search feature also in Information tab.
 
 0.1.0 
   Initial Proof of Concept release.
